Removed depecrated method.